Gap fix and border-image removed.

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -72,7 +72,6 @@ section {
     grid-template-columns: 1fr;
     padding: 1rem;
     text-align: center;
-    border-image: 3px;
 }
 
 #menu::before {
@@ -106,7 +105,7 @@ img {
     color: #000;
     justify-content: space-between;
     align-items: center;
-    gap: 60;
+    gap: 60px 5px;
 }
 
 .navigation a {
